- adds handler function for getting all Algorand accounts for a specific user - adds Swagger documentation for HandleGetUserAccounts handler
