# docs/swagger.yaml
@@ -1,5 +1,14 @@
 basePath: /api/v1
 definitions:
+  main.AccountResponse:
+    properties:
+      address:
+        type: string
+      created_at:
+        type: string
+      id:
+        type: integer
+    type: object
   main.HTTPResp:
     properties:
       code:
@@ -53,6 +62,62 @@ info:
   title: NFT Maker API
   version: 0.0.1
 paths:
+  /accounts/{userId}/all:
+    get:
+      description: List all accounts for a specific user
+      parameters:
+      - description: User ID
+        in: path
+        name: userId
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/main.AccountResponse'
+            type: array
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/main.HTTPResp'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/main.HTTPResp'
+      summary: Get user's accounts
+      tags:
+      - accounts
+  /accounts/{userId}/new:
+    post:
+      description: Create new Algorand account for a specific user
+      parameters:
+      - description: User ID
+        in: path
+        name: userId
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Created
+          schema:
+            $ref: '#/definitions/main.HTTPResp'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/main.HTTPResp'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/main.HTTPResp'
+      summary: Create a new account
+      tags:
+      - accounts
   /users:
     get:
       description: Lists all users stored in the database
